# TaxServiceDocker

./: .gitignore  docker-compose.yml
frontend-image/: Dockerfile
frontend-image/front-end/: Cargo.toml
frontend-image/front-end/src/: button.rs  form.rs  input.rs  lib.rs  web.rs
postgres-image/: Dockerfile
wildfly-image/: Dockerfile
wildfly-image/modifications/: modifications.cli  modify-standalone.sh
wildfly-image/modules/org/postgresql/main/: module.xml
wildfly-image/taxservice/: .project  settings.gradle
wildfly-image/taxservice/app/: .project  build.gradle
wildfly-image/taxservice/app/src/main/java/taxservice/: App.java  CorsFilter.java  Country.java  Tax.java  TaxResource.java  TaxService.java  TaxServiceJax.java
wildfly-image/taxservice/app/src/test/java/taxservice/: AppTest.java
